--- a/src/scss/components/_newsletter-bleed.scss
+++ b/src/scss/components/_newsletter-bleed.scss
@@ -1,7 +1,7 @@
 .newsletter-bleed {
 	margin-top: 60px;
 	height: 250px;
-	background: $brand-primary;
+	background: theme-color("primary");
 	color: #FFF;
 	padding-top: 60px;
 	padding-bottom: 60px;
