--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -25,7 +25,7 @@
       top: 0;
       left: 50%;
       margin-left: -30px;
-      background: $brand-primary;
+      background: theme-color("primary");
     }
   }
 }
