--- a/src/scss/components/_newsletter-form.scss
+++ b/src/scss/components/_newsletter-form.scss
@@ -1,9 +1,20 @@
 #mc-embedded-subscribe-form {
 	input {
 		border-radius: 20px;
+		&::placeholder {
+			color: #BDC3C7;
+		}
 	}
 }
 
 #mc-embedded-subscribe {
 	cursor: pointer;
+}
+
+.landing-newsletter-form {
+	input {
+		padding: .75rem 1rem;
+		min-width: 250px;
+		margin-bottom: 1rem;
+	}
 }
