--- a/src/scss/pages/_crypto-101-list.scss
+++ b/src/scss/pages/_crypto-101-list.scss
@@ -9,7 +9,7 @@
 
 	h1 {
 		margin-bottom: 120px;
-		color: $brand-primary;
+		color: theme-color("primary");
 	}
 
 	.section {
@@ -57,7 +57,7 @@
 	.wallets-section, .token-section {
 		position: relative;
 		z-index: 1;
-		box-shadow: 0px 0px 8px 1px $gray;
+		box-shadow: 0px 0px 8px 1px $gray-400;
 			@include media-breakpoint-up(md) {
 				margin-top: -2rem;
 			}
@@ -69,6 +69,6 @@
 
 	.premium-content {
 		margin-top: 3rem;
-		color: $gray-light;
+		color: $gray-400;
 	}
 }
