--- a/src/scss/pages/_news-list.scss
+++ b/src/scss/pages/_news-list.scss
@@ -42,7 +42,7 @@
 
 	    p {
 	    	font-size: 16px;
-	    	color: $gray-light;
+	    	color: $gray-400;
 	    }
 		}
 	}
@@ -96,7 +96,7 @@
 
 	    .date {
 	    	font-size: 12px;
-	    	color: $gray;
+	    	color: $gray-400;
 	    }
 	  }
 	}
