redesigns premium page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,19 +36,19 @@
 </div>
 <div class="features">
 	<div class="featurebox">
-		<img src="/images/{{ index $.Site.Data.images.hash "landing-page/chat.svg" }}">
+		<img src="/images/{{ index $.Site.Data.images.hash "tropyc/chat.svg" }}">
 		<h2>Live chat</h2>
-		<p>Get your personal crypto analyst 7/7.</p>
+		<p>Get your personal crypto analyst 7/7</p>
 	</div>
 	<div class="featurebox">
-		<img src="/images/{{ index $.Site.Data.images.hash "landing-page/star.svg" }}">
-		<h2>Tokensale rating</h2>
-		<p>Evaluate projects with our ICO rating reports.</p>
+		<img src="/images/{{ index $.Site.Data.images.hash "tropyc/star.svg" }}">
+		<h2>Tokensale Rating</h2>
+		<p>Evaluate projects with our ICO rating reports</p>
 	</div>
 	<div class="featurebox">
-		<img src="/images/{{ index $.Site.Data.images.hash "landing-page/portfolio.svg" }}">
-		<h2>Education</h2>
-		<p>Learn how to purchase, store, manage and invest.</p>
+		<img src="/images/{{ index $.Site.Data.images.hash "tropyc/portfolio.svg" }}">
+		<h2>Portfolio</h2>
+		<p>Learn how to purchase, store, manage and invest</p>
 	</div>
 </div>
 <div class="bleed d-flex align-items-center justify-content-center">
