--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="navbar-tropyc">
   <!-- Logo -->
 	<div class="navbar-tropyc-brand">
-		<a href="/" title="home" alt="logo" style="background-image: url('/images/{{ index $.Site.Data.images.hash "tropyc-logo.png" }}');">tropyc</a>
+		<a href="/" title="home" alt="logo" style="background-image: url('/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo.png" }}');">tropyc</a>
 	</div>
 
   <!-- Right Navigation -->
