--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -104,7 +104,7 @@ $theme-colors: (
   primary: #01BF86,
   secondary: $gray-600,
   success: $green,
-  info: $cyan,
+  info: $blue,
   warning: $yellow,
   danger: $red,
   light: $gray-100,
