--- a/src/scss/pages/_crypto-101-list.scss
+++ b/src/scss/pages/_crypto-101-list.scss
@@ -1,9 +1,9 @@
 .crypto-101 {
 	min-height: 1500px;
 	background: #ffffff;
-	background: -moz-linear-gradient(top, #ffffff 35%, #2ecc71 36%, #2ecc71 83%, #ffffff 84%);
-	background: -webkit-linear-gradient(top, #ffffff 35%,#2ecc71 36%,#2ecc71 83%,#ffffff 84%);
-	background: linear-gradient(to bottom, #ffffff 35%,#2ecc71 36%,#2ecc71 83%,#ffffff 84%);
+	background: -moz-linear-gradient(top, #ffffff 35%, theme-color("primary") 35%, theme-color("primary") 83%, #ffffff 83%);
+	background: -webkit-linear-gradient(top, #ffffff 35%,theme-color("primary") 35%,theme-color("primary") 83%,#ffffff 83%);
+	background: linear-gradient(to bottom, #ffffff 35%,theme-color("primary") 35%,theme-color("primary") 83%,#ffffff 83%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 );
 	padding: 90px 0;
 
@@ -57,7 +57,7 @@
 	.wallets-section, .token-section {
 		position: relative;
 		z-index: 1;
-		box-shadow: 0px 0px 8px 1px $gray-400;
+		box-shadow: 0px 0px 8px 1px $gray-600;
 			@include media-breakpoint-up(md) {
 				margin-top: -2rem;
 			}
@@ -69,6 +69,6 @@
 
 	.premium-content {
 		margin-top: 3rem;
-		color: $gray-400;
+		color: $gray-600;
 	}
 }
