--- a/src/scss/pages/_premium.scss
+++ b/src/scss/pages/_premium.scss
@@ -1,11 +1,5 @@
 .premium-packs {
-	min-height: 750px;
-	background: #ffffff;
-	background: -moz-linear-gradient(top, #ffffff 57%, #2ecc71 58%);
-	background: -webkit-linear-gradient(top, #ffffff 57%,#2ecc71 58%);
-	background: linear-gradient(to bottom, #ffffff 57%,#2ecc71 58%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#2ecc71',GradientType=0 );
-	padding: 90px 0;
+	padding-top: 50px;
 
 	h1 {
 		margin-bottom: 90px;
@@ -20,6 +14,7 @@
 	.premium-pack {
 		width: 100%;
 		min-height: 600px;
+		border: 1px solid $gray-400;
 		border-radius: 4px;
 		background: #FEFBFB;
 
@@ -30,7 +25,7 @@
 
 		.highlight {
 			text-transform: uppercase;;
-			background: $gray-400;
+			background: $gray-200;
 			padding: 0.5rem 2rem;
 			font-size: 0.9rem;
 			font-weight: 500;
@@ -49,7 +44,7 @@
 		.collapsed-list {
 			li {
 				font-size: 0.8rem;
-				color: $gray-400;
+				color: $gray-600;
 			}
 		}
 
@@ -99,10 +94,10 @@
 	}
 
 	.business-pack {
-		border-top: 6px solid $orange;
+		border-top: 6px solid $yellow;
 
 		h2 {
-			color: $orange;
+			color: $yellow;
 		}
 	}
 
@@ -112,28 +107,5 @@
 		h2 {
 			color: $red;
 		}
-	}
-}
-
-.pack-features {
-	margin: 60px 0 90px;
-
-  .featurebox {
-	  margin-left: auto;
-	  margin-right: auto;
-  	display: flex;
-    align-items: center;
-    width: 300px;
-    flex-direction: column;
-
-    img {
-    	padding-top: 30px;
-    	height: 100px;
-    }
-
-    p {
-    	margin-top: 2rem;
-    	text-align: center;
-    }
 	}
 }
