--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="navbar-tropyc">
   <!-- Logo -->
 	<div class="navbar-tropyc-brand">
-		<a href="/" title="home" alt="logo" style="background-image: url('/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo.png" }}');">tropyc</a>
+		<a href="/" title="home"><img src="/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo-name.png" }}" alt="logo"></a>
 	</div>
 
   <!-- Right Navigation -->
@@ -12,7 +12,7 @@
     {{end}}
   </div>
   <div>
-    <a href="/premium/" class="d-none d-lg-block btn navbar-tropyc-button">Premium</a>
+    <a href="/premium/" class="d-none d-lg-block btn navbar-tropyc-button">PREMIUM</a>
   </div>
 
   <!-- Dropdown appearing on mobile only -->
