--- a/src/scss/components/_token-table.scss
+++ b/src/scss/components/_token-table.scss
@@ -19,6 +19,14 @@
     padding-left: 60px !important;
   }
 
+  .market-cap {
+  	color: #01bf86;
+  }
+
+  .price {
+  	color: #f9ba48;
+  }
+
   .label-emphasis {
     font-weight: 400;
   }
