--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,13 +16,14 @@
 @import 'components/newsletter-bleed';
 @import 'components/toc';
 @import 'components/news-sidebar';
+@import 'components/share-links';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
 @import 'pages/crypto-101-list';
 @import 'pages/token-sales-list';
 @import 'pages/token-sales-single';
-@import 'pages/tokens-list';
+@import 'pages/markets-list';
 @import 'pages/premium';
 @import 'pages/exchanges-list';
 @import 'pages/contact-single';
