--- a/layouts/crypto-101/single.html
+++ b/layouts/crypto-101/single.html
@@ -10,11 +10,18 @@
     </p>
   </div>
   <div class="row mb-5">
-  	<div class="col-12 col-md-3 push-md-9 sidebar">
+  	<div class="col-12 col-lg-3 order-1 order-lg-2 sidebar">
   		{{ partial "toc" .}}
   	</div>
-  	<div class="col-12 col-md-9 pull-md-3 content">
-  		{{ .Content}}
+  	<div class="col-12 col-lg-9 order-2 order-lg-1 content">
+  		<div class="row">
+  			<div class="col-md-2">
+  				{{ partial "share-links" . }}
+  			</div>
+  			<div class="col-md-10">
+  				{{ .Content}}
+  			</div>
+  		</div>
   	</div>
   </div>
 
