--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-sm-12 col-md-3">
 				<div class="footer-logo">
-					<a href="/" style="background-image: url('/images/{{ index $.Site.Data.images.hash "tropyc-logo.png" }}');">tropyc</a>
+					<a href="/" title="home"><img src="/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo-name.png" }}" alt="logo"></a>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-2">
