--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,4 +1,4 @@
-{{ if and (gt .WordCount 400 ) (ne .Params.toc "false") }}
+{{ if and (gt .WordCount 400 ) (ne .Params.toc false) }}
 	<aside class="toc">
 		{{.TableOfContents}}
 	</aside>
