--- a/layouts/token-sales/single.html
+++ b/layouts/token-sales/single.html
@@ -7,7 +7,7 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="col-lg-2 hidden-md-down">
+			<div class="col-lg-2 d-none d-lg-block">
 				<div class="token-id">
           <img class="img-fluid img-thumbnail" src="/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Title | urlize) }}">
 					<h1 class="token-title">{{.Title }}</h1>
@@ -16,13 +16,9 @@
 
 			<div class="col-lg-10">
 				<div class="token-overview">
-					<div class="row">
-						<div class="col-6 hidden-lg-up">
-							<div class="token-id">
-								<h1>{{.Title }}</h1>
-								<img class="token-logo img-thumbnail" src="/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Title | urlize) }}">
-							</div>
-						</div>
+					<div class="token-id d-lg-none">
+						<h1 class="token-title">{{.Title }}</h1>
+						<img class="token-logo img-thumbnail" src="/images/{{ index $.Site.Data.images.hash (printf "token-logos/%s.png" .Title | urlize) }}">
 					</div>
 					<h2>Snapshot</h2>
           <div class="row">
@@ -91,7 +87,7 @@
 
 		</div>
 
-		<div class="offset-lg-2 col-lg-10">
+		<div class="ml-auto col-lg-10">
 			<div class="token-description">
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs nav-justified flex-column flex-sm-row" role="tablist">
