--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,1 +1,2 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:300,400,500,100);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700);
