--- a/src/scss/pages/_token-sales-single.scss
+++ b/src/scss/pages/_token-sales-single.scss
@@ -13,12 +13,8 @@
 
 .token-title {
   margin-top: 15px;
-  font-size: 30px;
+  font-size: 2rem;
   color: #6f8691;
-
-  @include media-breakpoint-down(sm) {
-    font-size: 20px;
-  }
 }
 
 .token-logo {
