--- a/layouts/premium/single.html
+++ b/layouts/premium/single.html
@@ -20,7 +20,7 @@
 						<ul class="collapsed-list">
 							<li>- Introduction to crypto and bitcoin</li>
 							<li>- Purchase, manage and secure your assets</li>
-							<li>- Customised portfolio - your risk, timeline and expected returns</li>
+							<li>- Your risk, timeline and expected returns</li>
 						</ul>
 					</div>
 					<div class="price-details">
@@ -55,7 +55,7 @@
 						<ul class="collapsed-list">
 							<li>- Detailed analysis of upcoming ICOs</li>
 							<li>- Fundamentals of tokens investment</li>
-							<li>- DIY cold wallet and Darkweb marketplace tutorials</li>
+							<li>- DIY cold wallet and Darkweb tutorials</li>
 						</ul>
 					</div>
 					<div class="price-details">
