--- a/layouts/crypto-101/single.html
+++ b/layouts/crypto-101/single.html
@@ -20,6 +20,17 @@
   			</div>
   			<div class="col-md-10">
   				{{ .Content}}
+
+  				<div class="text-center mt-5">
+						{{ if .PrevInSection }}
+						  <a href="{{ .PrevInSection.URL }}">Prev <i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+						{{ end }}
+						{{ if and .PrevInSection .NextInSection }} | {{ end }}
+						{{ if .NextInSection }}
+						  <a href="{{ .NextInSection.URL }}"><i class="fa fa-chevron-right" aria-hidden="true"></i> Next</a>
+						{{ end }}
+					</div>
+
   			</div>
   		</div>
   	</div>
