--- a/layouts/partials/newsletter-banner-form.html
+++ b/layouts/partials/newsletter-banner-form.html
@@ -1,7 +1,7 @@
 <div id="mc_embed_signup">
 	<form action="//tropyc.us15.list-manage.com/subscribe/post?u=24fb0dbeddc7ce4265c8879b9&id=cd00a11da3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline landing-newsletter-form" target="_blank" novalidate>
-		<div id="mc_embed_signup_scroll" class="mx-auto">
-			<input type="email" value="" name="EMAIL" class="email form-control text-center" id="mce-EMAIL" placeholder="satoshi@nakamoto.com" required>
+		<div id="mc_embed_signup_scroll" class="w-100">
+			<input type="email" value="" name="EMAIL" class="email mx-auto form-control text-center" id="mce-EMAIL" placeholder="satoshi@nakamoto.com" required>
 			<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			<div>
 				<input type="submit" value="GET A FREE ICO REPORT" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">
