--- a/src/scss/components/_newsletter-form.scss
+++ b/src/scss/components/_newsletter-form.scss
@@ -16,5 +16,10 @@
 		padding: .75rem 1rem;
 		min-width: 250px;
 		margin-bottom: 1rem;
+		width: 85%;
+	}
+
+	.form-control {
+		width: 85%;
 	}
 }
