--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="article-info">
 		<h3>
-			<a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a>
+			<a href="{{ .URL }}" title="{{ .Title }}">{{ .Title }}</a>
 			{{ range .Params.categories }}
 				<a href="/categories/{{ . }}" class="btn btn-info btn-sm float-right mx-2">{{ . }}</a>
 			{{ end }}
