--- a/layouts/token-sales/list.html
+++ b/layouts/token-sales/list.html
@@ -5,7 +5,7 @@
   <div class="hero">
     <h1>{{ .Title }}</h1>
     <p>
-      {{ .Params.bref | safeHTML }}
+      {{ .Params.bref | markdownify }}
     </p>
   </div>
   <div class="content">
