--- a/src/scss/components/_token-table.scss
+++ b/src/scss/components/_token-table.scss
@@ -7,6 +7,8 @@
     text-align: center;
     vertical-align: middle;
     font-size: 14px;
+    padding-top: 1.5rem;
+    padding-bottom: 1.25rem;
   }
 
   th {
