changes to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,12 @@
 <footer role="contentinfo" class="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-3">
+			<div class="col-md-12 col-lg-3">
 				<div class="footer-logo">
 					<a href="/" title="home"><img src="/images/{{ index $.Site.Data.images.hash "tropyc/tropyc-logo-name.png" }}" alt="logo"></a>
 				</div>
 			</div>
-			<div class="col-sm-6 col-md-2">
+			<div class="col-md-6 col-lg-3">
 				<h3 class="footer-nav-title">Company</h3>
 				<ul class="footer-nav">
 					<li><a href="/contact/">Contact</a></li>
@@ -14,7 +14,7 @@
 					<li><a href="/legal/">Legal</a></li>
 				</ul>
 			</div>
-			<div class="col-sm-6 col-md-2">
+			<div class="col-md-6 col-lg-3">
 				<h3 class="footer-nav-title">Useful Links</h3>
 				<ul class="footer-nav">
 					<li><a href="/rating-framework/">Rating Framework</a></li>
@@ -22,7 +22,7 @@
 					<li><a href="/disclaimer/">Disclaimer</a></li>
 				</ul>
 			</div>
-			<div class="col-sm-12 col-md-5 col-social">
+			<div class="col-md-12 col-lg-3 col-social">
 				<ul class="footer-nav">
 					<li><a href="https://t.me/{{.Site.Params.telegram}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/telegram.svg" }}">Join our Telegram</a></li>
 					<li><a href="https://www.facebook.com/{{.Site.Params.facebook}}" target="_blank"><img src="/images/{{ index $.Site.Data.images.hash "social-media/facebook.svg" }}">Like our Facebook</a></li>
