--- a/src/scss/components/_exchange-card.scss
+++ b/src/scss/components/_exchange-card.scss
@@ -27,6 +27,30 @@
     	background-size: 30px;
     	padding-left: 40px !important;
 		}
+
+		.popular {
+			color: #F1C40F;
+		}
+
+		.altcoin {
+			color: #2980B9;
+		}
+
+		.trader {
+			color: #E74C3C;
+		}
+
+		.simple {
+			color: #4ECDC4;
+		}
+
+		.cash {
+			color: #2ECC71;
+		}
+
+		.decentralised {
+			color: #9B59B6;
+		}
 	}
 
 	.exchange-specs {
