--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -28,7 +28,7 @@
 	  }
 
 	  img {
-	  	height: 60px;
+	  	height: 40px;
 	  }
 	}
 }
@@ -51,6 +51,7 @@
   color: #333;
   font-size: 16px;
   font-weight: 600;
+  font-family: "Montserrat";
 }
 .navbar-tropyc-link:hover {
   color: $orange;
