--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,15 +3,22 @@
 
 {{ define "main" }}
 
-<div class="container">
-	{{ $section := where .Data.Pages "Section" .Section }}
-	<section class="flex-ns flex-wrap justify-around mt5">
-	  {{ range  $section }}
-	    <div class="relative w-100  mb4 bg-white">
-	      {{ partial "summary.html" . }}
-	    </div>
-	  {{ end }}
-	</section>
+<div class="container-fluid">
+  <div class="row">
+  	<div class="col-lg-8">
+	  	<div class="news">
+
+  			{{ range .Paginator.Pages.ByDate }}
+		  		{{ partial "article" . }}
+				{{ end }}
+				<!-- <section>{{ partial "pagination" .}}</section> -->
+
+			</div>
+  	</div>
+  	<div class="col-lg-4 col-md-12">
+			{{ partial "news-sidebar" . }}
+  	</div>
+  </div>
 </div>
 
 {{ end }}
