--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -4,7 +4,7 @@
 {{ define "main" }}
 
 <div class="news-single">
-	<div class="container-fluid">
+	<div class="container">
 	  <div class="row">
 	  	<div class="col-lg-8">
 		  	<div class="article-detail">
