--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -8,7 +8,7 @@
 		<h3>
 			<a href="{{ .URL }}" title="{{ .Title }}">{{ .Title }}</a>
 			{{ range .Params.categories }}
-				<a href="/categories/{{ . }}" class="btn btn-info btn-sm float-right mx-2">{{ . }}</a>
+				<a href="/categories/{{ . | urlize }}" class="btn btn-sm btn-{{ . | lower }} float-right mx-2">{{ . | upper }}</a>
 			{{ end }}
 		</h3>
 		<p class="date">{{ .Date | dateFormat "January 2, 2006" }}</p>
