--- a/layouts/token-sales/single.html
+++ b/layouts/token-sales/single.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="flex-row">
                   <div class="flex-col-1 label">End</div>
-                  <div class="flex-col-2">{{ .Params.enddate | dateFormat "02/01/2006" }}</div>
+                  <div class="flex-col-2">{{ if ((.Params.enddate).After now) }}{{ .Params.enddate | dateFormat "02/01/2006" }}{{ else }}<span class="text-info">{{ .Params.enddate | dateFormat "02/01/2006" }} (ICO has ended)</span>{{ end }}</div>
                 </div>
                 <div class="flex-row">
                   <div class="flex-col-1 label">Platform</div>
@@ -52,12 +52,14 @@
                   <div class="flex-col-1 label">Links</div>
                   <div class="flex-col-2">
                     {{ if isset .Params.links "website" }}<a href="{{ .Params.links.website }}">{{ .Params.links.website }}</a>{{ end }}
-                    <div class="mt-2">
+                    <div class="token-social-links mt-2">
                       {{ if isset .Params.links "twitter" }}<a href="https://twitter.com/{{ .Params.links.twitter }}" target="_blank" class="mx-1"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>{{ end }}
                       {{ if isset .Params.links "facebook" }}<a href="https://www.facebook.com/{{ .Params.links.facebook }}" target="_blank" class="mx-1"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>{{ end }}
                       {{ if isset .Params.links "reddit" }}<a href="https://www.reddit.com/r/{{ .Params.links.reddit }}" target="_blank" class="mx-1"><i class="fa fa-reddit fa-2x" aria-hidden="true"></i></a>{{ end }}
                       {{ if isset .Params.links "github" }}<a href="https://github.com/{{ .Params.links.github }}" target="_blank" class="mx-1"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>{{ end }}
                       {{ if isset .Params.links "telegram" }}<a href="https://t.me/{{ .Params.links.telegram }}" target="_blank" class="mx-1"><i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>{{ end }}
+                      {{ if isset .Params.links "slack" }}<a href="https://{{ .Params.links.slack }}.slack.com/" target="_blank"><i class="fa fa-slack fa-2x" aria-hidden="true"></i></a>{{ end }}
+                      {{ if isset .Params.links "medium" }}<a href="https://https://medium.com/{{ .Params.links.medium }}" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>{{ end }}
                     </div>
                   </div>
                 </div>
@@ -92,16 +94,16 @@
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs nav-justified flex-column flex-sm-row" role="tablist">
 				  <li class="nav-item">
-				    <a class="flex-sm-fill nav-link active" data-toggle="tab" href="#concept" role="tab">CONCEPT</a>
+				    <a class="flex-sm-fill nav-link active" data-toggle="tab" href="#deal" role="tab">DEAL</a>
+				  </li>
+				  <li class="nav-item">
+				    <a class="flex-sm-fill nav-link" data-toggle="tab" href="#concept" role="tab">CONCEPT</a>
 				  </li>
 				  <li class="nav-item">
 				    <a class="flex-sm-fill nav-link" data-toggle="tab" href="#trust" role="tab">TRUST</a>
 				  </li>
 				  <li class="nav-item">
 				    <a class="flex-sm-fill nav-link" data-toggle="tab" href="#token" role="tab">TOKEN</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="flex-sm-fill nav-link" data-toggle="tab" href="#deal" role="tab">DEAL</a>
 				  </li>
           <li class="nav-item">
             <a class="flex-sm-fill nav-link" data-toggle="tab" href="#roadmap" role="tab">ROADMAP</a>
@@ -110,8 +112,33 @@
 
 				<!-- Tab panes -->
 				<div class="tab-content">
+					<div class="tab-pane active" id="deal" role="tabpanel">
+            <p>{{ .Params.deal.info.recap }}</p>
+            <table class="deal-table table table-sm">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>CUT</th>
+                  <th>SUPPLY</th>
+                  <th>{{ .Params.deal.headers.cryptoHeader }}</th>
+                  <!-- <th>1 ETH</th> -->
+                </tr>
+              </thead>
+              <tbody>
+              	{{ range .Params.deal.rows }}
+                <tr>
+                  <td>{{ .distribution }}</td>
+                  <td>{{ .cut }}</td>
+                  <td>{{ .supply }}</td>
+                  <td>{{ .cryptovalue }}</td>
+                  <!-- <td>{{ .fiatvalue }}</td> -->
+                </tr>
+                {{ end }}
+              </tbody>
+            </table>
+          </div>
 
-				  <div class="tab-pane active" id="concept" role="tabpanel">
+				  <div class="tab-pane" id="concept" role="tabpanel">
 				  	<div class="label">Description</div>
 						<p>{{ .Description }}</p>
 				  	<div class="label">Features</div>
@@ -147,10 +174,6 @@
 	            <div class="flex-col-1">Disbursement date</div>
 	            <div class="flex-col-2">{{ .Params.trust.disbursementdate }}</div>
 	          </div>
-	          <div class="flex-row mb-2">
-	            <div class="flex-col-1">Refund</div>
-	            <div class="flex-col-2">{{ if .Params.trust.refund }}<i class="fa fa-check-square-o fa-lg" aria-hidden="true"></i>{{ else }}<i class="fa fa-square-o fa-lg" aria-hidden="true"></i>{{ end }}</div>
-	          </div>
           </div>
 
 				  <div class="tab-pane" id="token" role="tabpanel">
@@ -174,31 +197,6 @@
 	            <div class="flex-col-1">Similar</div>
 	            <div class="flex-col-2">{{ .Params.token.similar }}</div>
 	          </div>
-          </div>
-
-				  <div class="tab-pane" id="deal" role="tabpanel">
-            <table class="deal-table table table-sm">
-              <thead>
-                <tr>
-                  <th></th>
-                  <th>CUT</th>
-                  <th>SUPPLY</th>
-                  <th>{{ .Params.deal.headers.cryptoHeader }}</th>
-                  <!-- <th>1 ETH</th> -->
-                </tr>
-              </thead>
-              <tbody>
-              	{{ range .Params.deal.rows }}
-                <tr>
-                  <td>{{ .distribution }}</td>
-                  <td>{{ .cut }}</td>
-                  <td>{{ .supply }}</td>
-                  <td>{{ .cryptovalue }}</td>
-                  <!-- <td>{{ .fiatvalue }}</td> -->
-                </tr>
-                {{ end }}
-              </tbody>
-            </table>
           </div>
 
           <div class="tab-pane" id="roadmap" role="tabpanel">
