--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -55,7 +55,7 @@ $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
-$gray-600: #868e96 !default;
+$gray-600: #7F8C8D !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #353536 !default;
@@ -311,8 +311,8 @@ $table-cell-padding:            .75rem !default;
 $table-cell-padding-sm:         .3rem !default;
 
 $table-bg:                      transparent !default;
-$table-accent-bg:               rgba($black,.05) !default;
-$table-hover-bg:                rgba($black,.075) !default;
+$table-accent-bg:               rgba($black,.02) !default;
+$table-hover-bg:                rgba($black,.05) !default;
 $table-active-bg:               $table-hover-bg !default;
 
 $table-border-width:            $border-width !default;
