--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'components/toc';
 @import 'components/news-sidebar';
 @import 'components/share-links';
+@import 'components/news-categories-buttons';
 @import 'pages/landing';
 @import 'pages/news-list';
 @import 'pages/news-single';
