--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -14,7 +14,7 @@
 
 		div:first-child {
 			font-size: 14px;
-    	color: #7F8C8D;
+    	color: $gray-600;
 		}
 
 		div:last-child {
@@ -56,7 +56,7 @@
 
     img {
     	padding-top: 30px;
-    	height: 150px;
+    	height: 120px;
     }
 
     h2 {
@@ -69,7 +69,7 @@
     p {
     	text-align: center;
 	    font-size: 15px;
-	    color: #7F8C8D;
+	    color: $gray-600;
     }
   }
 }
@@ -90,7 +90,7 @@
   .titlelabel {
   	line-height: 20px;
   	margin: 0 80px;
-    color: #7F8C8D;
+    color: $gray-600;
     font-size: 1.2rem;
   }
 }
