--- a/src/scss/pages/_token-sales-single.scss
+++ b/src/scss/pages/_token-sales-single.scss
@@ -80,6 +80,14 @@
   tbody > tr:last-child td {
     border-width: 2px;
   }
+
+  .tokensale-row {
+		color: $green;
+  }
+
+  .total-row {
+  	font-weight: 600;
+  }
 }
 
 .roadmap {
