--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -44,11 +44,14 @@
 .navbar-tropyc-item {
   cursor: pointer;
   padding: 0 30px;
+	@include media-breakpoint-down(lg) {
+  	padding: 0 20px;
+  }
 }
 
 /* Navbar link */
 .navbar-tropyc-link {
-  color: #333;
+  color: $gray-700;
   font-size: 16px;
   font-weight: 600;
   font-family: "Montserrat";
