--- a/src/scss/pages/_news-list.scss
+++ b/src/scss/pages/_news-list.scss
@@ -1,5 +1,5 @@
 .news {
-	margin-bottom: 90px;
+	margin: 30px 0 90px;
 
 	.article-featured {
 		a {
@@ -20,7 +20,7 @@
 
 	    img {
 	    	width: 100%;
-	    	height: 400px;
+	    	height: 350px;
 	    	object-fit: cover;
 	    }
 		}
